--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -27,6 +27,10 @@
     padding-top: 48px;
     padding-left: 40px;
     padding-bottom: 48px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
   }
 
   .mobile-menu__close-btn {
@@ -40,7 +44,7 @@
   }
 
   .mobile-nav {
-    margin-bottom: 306px;
+    margin-bottom: auto;
   }
 
   .mobile-nav__item:not(:last-child) {
@@ -59,7 +63,6 @@
   .mobile-nav__link_current {
     color: var(--accent-color);
   }
-
   .mobile-contact {
     margin-bottom: 64px;
   }
